# image-previewer-py

./: pyproject.toml
image_previewer_py/: __main__.py  form.py  form.ui
tests/: test_image_previewer_py.py
