[tool.poetry]
name = "image-previewer-py"
version = "0.1.0"
description = ""
authors = ["Roshan <roshanrahman6399@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
PyQt5 = "^5.15.6"
pyinstaller = "^5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
prospector = "^1.7.7"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
